Refactor views structure

--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -1,8 +1,8 @@
 <!--  Include de head -->
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
     <body>
-        <%- include("./partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
             <main>
                 <div class="spans">
                     <span><i class="fa-solid fa-backward"></i>Volver</span>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </main>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
 
