--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,8 +1,8 @@
 <!--  Include de head -->
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
     <body>
-        <%- include("./partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
             <main>
                 <form action="login.html" method="post">
                     <div>
@@ -26,7 +26,7 @@
                     <div><a href="/register">¿No tiene una cuenta? Registrese</a></div>
                 </form>
             </main>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
     </html>
