--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,8 +1,8 @@
 <!--  Include de head -->
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
     <body>
-        <%- include("./partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
             <main>
                 <form action="/register" method="post">
                     <div>
@@ -29,7 +29,7 @@
                     </div>
                 </form>
             </main>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
     </html>
