--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -1,8 +1,8 @@
 <!--  Include de head -->
-<%- include("./partials/head.ejs") %>
+<%- include("../partials/head.ejs") %>
 
     <body>
-        <%- include("./partials/header.ejs") %>
+        <%- include("../partials/header.ejs") %>
             <main>
                 <div class="contenidoCarrito">
                     <a class="nombreCart">Carrito de compras:</a>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </main>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
 </html>
