--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   color: inherit;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: "Libre Franklin", sans-serif;
 }
 
 /* Start Navbar styles */
@@ -14,7 +14,7 @@ nav.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #51A3A3;
+  background-color: #51a3a3;
   color: white;
 }
 
@@ -39,7 +39,7 @@ nav.navbar #myLinks ul {
   position: absolute;
   left: 0;
   top: 65px;
-  background-color: #51A3A3;
+  background-color: #51a3a3;
 }
 
 nav.navbar #myLinks li {
@@ -62,7 +62,7 @@ nav.navbar .user {
   padding: 5px;
 }
 
-nav.navbar .user ul{
+nav.navbar .user ul {
   display: flex;
   flex-direction: row;
   list-style-type: none;
@@ -125,13 +125,12 @@ article.product .category {
 article.product .title {
   font-size: 14px;
   font-weight: 600;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 
 article.product .price {
   font-size: 18px;
 }
-
 
 /* End Main */
 
@@ -141,15 +140,15 @@ footer .footer-navbar {
   background-color: #eaeaea;
 }
 
-footer nav ul li{
+footer nav ul li {
   padding-left: 10px;
   display: none;
 }
-.footer-navbar-items{
+.footer-navbar-items {
   padding: 10px;
   height: 100%;
 }
-.footer-div-links{
+.footer-div-links {
   display: flex;
   flex-wrap: wrap;
   background-color: #333333;
@@ -157,16 +156,19 @@ footer nav ul li{
   color: #9e9e9e;
   padding: 10px;
 }
-#social-media{
+
+#social-media {
   width: 100%;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-around;
 }
-#social-media i{
+
+#social-media i {
   font-size: 24px;
 }
-#copyright{
+
+#copyright {
   width: 100%;
   justify-content: center;
   display: flex;
@@ -174,71 +176,72 @@ footer nav ul li{
   margin-top: 10px;
 }
 
-/*Ënd Footer*/
+/* End Footer*/
 
-/*Start Login & Register form*/
-form{
+/* Start Login & Register form*/
+form {
   text-align: center;
   width: 80%;
   margin: auto;
 }
-form input{
+form input {
   display: block;
   width: 100%;
   padding: 10px 12px;
   border-radius: 5px;
   border: #cecdcd 1px solid;
 }
-form div{
+form div {
   margin-bottom: 10px;
   margin-top: 10px;
 }
-form button{
+form button {
   width: 100%;
-  color: #ffffff ;
+  color: #ffffff;
   background-color: #000000;
   padding: 10px 12px;
   border: none;
 }
-/*End Login & Register form*/
-/*Start Cart*/
-.cart-items{
+/* End Login & Register form*/
+
+/* Start Cart*/
+.cart-items {
   display: flex;
   margin: 10px;
   padding: 10px;
   border: #000000 1px solid;
 }
-.product-description{
+.product-description {
   margin-right: auto;
   width: 100%;
 }
-.product-price{
+.product-price {
   font-weight: bold;
 }
-.quantity{
+.quantity {
   display: flex;
   margin-left: 90px;
 }
-.quantity-price{
+.quantity-price {
   display: flex;
 }
-.product{
+.product {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.product-unit{
+.product-unit {
   display: flex;
   width: 100%;
 }
-.product-subtotal{
+.product-subtotal {
   display: flex;
   justify-content: space-between;
   position: relative;
 }
-/*End Cart*/
+/* End Cart*/
 
-/*Product*/
+/* Start Product */
 .imagenproducto {
   width: 100%;
 }
@@ -278,9 +281,62 @@ form button{
   margin: 3px;
 }
 
+/* Start Shopping Cart */
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Height of the footer */
+  background: #6cf;
+}
 
-/*Tablet*/
+/* .contenidoCarrito{
+  position: relative;
+  top: 99px;
+} */
+
+.botonCompra {
+  text-align: center;
+}
+
+.botonCart {
+  background-color: black;
+  color: white;
+}
+
+.botonCart:hover {
+  background-color: white;
+  color: black;
+}
+
+.agregarProducto {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* .compraInfo{
+  position: relative;
+  top: 100px;
+} */
+
+.nombreCart {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+/* End Shopping Cart */
+
+/* Start Error */
+
+main .error {
+  margin: 20px;
+}
+
+/* End Error */
+
+/* Mobile only */
+
 @media (max-width: 768px) {
   #myLinks {
     display: none;
@@ -295,9 +351,9 @@ form button{
   }
 }
 
+/* Tablet layout */
 
 @media (min-width: 426px) {
-
   .articles {
     display: flex;
     flex-wrap: wrap;
@@ -307,14 +363,15 @@ form button{
     width: 48%;
   }
 
-  #social-media{
+  #social-media {
     width: 80%;
     margin-bottom: 10px;
     margin: auto;
   }
 }
 
-/*Laptop*/
+/* Laptop layout */
+
 @media (min-width: 769px) {
   nav.navbar .navbar-toggler {
     display: none;
@@ -322,54 +379,54 @@ form button{
   nav.navbar .brand {
     width: 160px;
   }
-  nav.navbar #myLinks ul{
+  nav.navbar #myLinks ul {
     display: flex;
     list-style-type: none;
     flex-direction: row;
     position: relative;
     top: 0;
-    background-color: #51A3A3;
+    background-color: #51a3a3;
   }
   nav.navbar #myLinks {
     display: block;
     flex-direction: row;
   }
-  main{
+  main {
     min-width: 768px;
     max-width: 75%;
     margin: auto;
   }
-  .banner img{
+  .banner img {
     border-radius: 10px;
   }
   article.product {
     width: 23%;
   }
-  footer nav ul li{
+  footer nav ul li {
     padding-left: 10px;
     display: block;
   }
-  .footer-navbar{
+  .footer-navbar {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     height: 180px;
     margin: auto;
   }
-  .footer-navbar-items{
+  .footer-navbar-items {
     width: 25%;
   }
-  .footer-div-links{
+  .footer-div-links {
     justify-content: space-between;
   }
-  #social-media{
+  #social-media {
     width: 20%;
     margin-bottom: 0;
     display: flex;
     justify-content: space-around;
     margin: 0;
   }
-  #copyright{
+  #copyright {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -377,48 +434,4 @@ form button{
     font: 8px;
     margin-top: 0;
   }
-}
-
-/*Carrito de Compras*/ 
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;   /* Height of the footer */
-  background: #6cf;
-}
-
-/* .contenidoCarrito{
-  position: relative;
-  top: 99px;
-} */
-
-.botonCompra{
-  text-align: center;
-}
-
-.botonCart{
-  background-color: black;
-  color: white;
-}
-
-.botonCart:hover{
-  background-color: white;
-  color: black;
-}
-
-.agregarProducto{
-  display: flex;
-  justify-content: space-evenly;
-}
-
-/* .compraInfo{
-  position: relative;
-  top: 100px;
-} */
-
-.nombreCart{
-  text-decoration: underline;
-  font-weight: bold;
 }
