--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -138,6 +138,9 @@ article.product .price {
 footer .footer-navbar {
   padding: 10px;
   background-color: #eaeaea;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 footer nav ul li {
@@ -155,6 +158,9 @@ footer nav ul li {
   font-weight: 300;
   color: #9e9e9e;
   padding: 10px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 #social-media {
