--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -135,6 +135,11 @@ article.product .price {
 /* End Main */
 
 /*Start Footer*/
+
+footer {
+  position: relative;
+  bottom: 0;
+}
 footer .footer-navbar {
   padding: 10px;
   background-color: #eaeaea;
@@ -155,6 +160,8 @@ footer nav ul li {
   font-weight: 300;
   color: #9e9e9e;
   padding: 10px;
+  position: relative;
+  bottom: 0;
 }
 
 #social-media {
