--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -139,7 +139,7 @@ footer .footer-navbar {
   padding: 10px;
   background-color: #eaeaea;
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom: 0;
 }
 
@@ -150,6 +150,7 @@ footer nav ul li {
 .footer-navbar-items {
   padding: 10px;
   height: 100%;
+  
 }
 .footer-div-links {
   display: flex;
@@ -159,7 +160,7 @@ footer nav ul li {
   color: #9e9e9e;
   padding: 10px;
   width: 100%;
-  position: fixed;
+  position: relative;
   bottom: 0;
 }
 
