--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -51,7 +51,7 @@
             <h1>Ofertas</h1>
             <div class="articles">
                 <article class="product">
-                    <a href="/product">
+                    <a href="/product/detail">
                         <header>
                             <img src="/images/products/HangingToiletryBag.webp" alt="" width="100%">
                         </header>
@@ -79,7 +79,7 @@
                     </a>
                 </article>
                 <article class="product">
-                    <a href="/product">
+                    <a href="/product/detail">
                         <header>
                             <img src="/images/products/Duffle70L.webp" alt="" width="100%">
                         </header>
