--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -196,13 +196,14 @@ form {
   width: 80%;
   margin: auto;
 }
-form input {
+form input, form textarea {
   display: block;
   width: 100%;
   padding: 10px 12px;
   border-radius: 5px;
   border: #cecdcd 1px solid;
 }
+form textarea {resize: none};
 form div {
   margin-bottom: 10px;
   margin-top: 10px;
@@ -213,6 +214,7 @@ form button {
   background-color: #000000;
   padding: 10px 12px;
   border: none;
+  border-radius: 4px;
 }
 /* End Login & Register form*/
 
@@ -447,3 +449,14 @@ main .error {
     margin-top: 0;
   }
 }
+
+/* Start Admin Site */
+
+body.admin main {
+  margin-top: 24px;
+}
+
+
+/* End Admin Site */
+/* Start Admin Site */
+/* Start Admin Site */
