--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,168 +1,130 @@
 <!--  Include de head -->
 <%- include("./partials/head.ejs") %>
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="navbar-toggler">
-                <a><i class="icon fas fa-bars fa-xl"></i></a>
-            </div>
-            <div class="brand">
-                <a href="/#">
-                    <img src="/images/logo.png" alt="Logo" id="brand-logo">
-                </a>
-            </div>
-            <div id="myLinks" class="icons">
-                <ul>
-                    <li>
-                        <a href="/#">Categorias</a>
-                    </li>
-                    <li>
-                        <a href="/#">Nuevo</a>
-                    </li>
-                    <li>
-                        <a href="/#">Ofertas</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="user">
-                <ul>
-                    <li>
-                        <a href="/login">
-                            <i class="fa-solid fa-circle-user"></i>
-                        <span class="login">Ingresar</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/cart">
-                            <i class="fa-solid fa-cart-shopping"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <div class="banner">
-            <div class="banner-content">
-                <img src="/images/banner.webp" alt="" width="100%">
-            </div>
-        </div>
-        <section>
-            <h1>Ofertas</h1>
-            <div class="articles">
-                <article class="product">
-                    <a href="/product/detail">
-                        <header>
-                            <img src="/images/products/HangingToiletryBag.webp" alt="" width="100%">
-                        </header>
-                        <div class="info">
-                            <div class="category">
-                                Organizadores
-                            </div>
-                            <div class="title">
-                                Hanging Toiletry Bag
-                            </div>
-                            <div class="price">
-                                $ 22.500
-                            </div>
-                            <div class="review">
-                                <div class="stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star-half"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="product">
-                    <a href="/product/detail">
-                        <header>
-                            <img src="/images/products/Duffle70L.webp" alt="" width="100%">
-                        </header>
-                        <div class="info">
-                            <div class="category">
-                                Bolsos
-                            </div>
-                            <div class="title">
-                                F.A.R Duffle 70L
-                            </div>
-                            <div class="price">
-                                $ 57.000
-                            </div>
-                            <div class="review">
-                                <div class="stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star-half"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="product">
-                    <a href="/product">
-                        <header>
-                            <img src="/images/products/Coast.webp" alt="" width="100%">
-                        </header>
-                        <div class="info">
-                            <div class="category">
-                                Maleta
-                            </div>
-                            <div class="title">
-                                Carry-On
-                            </div>
-                            <div class="price">
-                                $ 82.500
-                            </div>
-                            <div class="review">
-                                <div class="stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star-half"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="product">
-                    <a href="/product">
-                        <header>
-                            <img src="/images/products/NeckPillow.webp" alt="" width="100%">
-                        </header>
-                        <div class="info">
-                            <div class="category">
-                                Almohadas
-                            </div>
-                            <div class="title">
-                                Travel Neck Pillow
-                            </div>
-                            <div class="price">
-                                $ 16.500
-                            </div>
-                            <div class="review">
-                                <div class="stars">
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </article>
-            </div>
-        </section>
-    </main>
-    <%- include('partials/footer') %>
-</body>
 
-</html>
+    <body>
+        <%- include("./partials/header.ejs") %>
+            <main>
+                <div class="banner">
+                    <div class="banner-content">
+                        <img src="/images/banner.webp" alt="" width="100%">
+                    </div>
+                </div>
+                <section>
+                    <h1>Ofertas</h1>
+                    <div class="articles">
+                        <article class="product">
+                            <a href="/product/detail">
+                                <header>
+                                    <img src="/images/products/HangingToiletryBag.webp" alt="" width="100%">
+                                </header>
+                                <div class="info">
+                                    <div class="category">
+                                        Organizadores
+                                    </div>
+                                    <div class="title">
+                                        Hanging Toiletry Bag
+                                    </div>
+                                    <div class="price">
+                                        $ 22.500
+                                    </div>
+                                    <div class="review">
+                                        <div class="stars">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="product">
+                            <a href="/product/detail">
+                                <header>
+                                    <img src="/images/products/Duffle70L.webp" alt="" width="100%">
+                                </header>
+                                <div class="info">
+                                    <div class="category">
+                                        Bolsos
+                                    </div>
+                                    <div class="title">
+                                        F.A.R Duffle 70L
+                                    </div>
+                                    <div class="price">
+                                        $ 57.000
+                                    </div>
+                                    <div class="review">
+                                        <div class="stars">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="product">
+                            <a href="/product">
+                                <header>
+                                    <img src="/images/products/Coast.webp" alt="" width="100%">
+                                </header>
+                                <div class="info">
+                                    <div class="category">
+                                        Maleta
+                                    </div>
+                                    <div class="title">
+                                        Carry-On
+                                    </div>
+                                    <div class="price">
+                                        $ 82.500
+                                    </div>
+                                    <div class="review">
+                                        <div class="stars">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star-half"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                        <article class="product">
+                            <a href="/product">
+                                <header>
+                                    <img src="/images/products/NeckPillow.webp" alt="" width="100%">
+                                </header>
+                                <div class="info">
+                                    <div class="category">
+                                        Almohadas
+                                    </div>
+                                    <div class="title">
+                                        Travel Neck Pillow
+                                    </div>
+                                    <div class="price">
+                                        $ 16.500
+                                    </div>
+                                    <div class="review">
+                                        <div class="stars">
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </section>
+            </main>
+            <%- include('partials/footer') %>
+    </body>
+
+    </html>
