--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,6 +75,7 @@ nav.navbar .user li {
 
 nav.navbar .user i {
   font-size: 20px;
+  margin: 6px;
 }
 /* End Navbar */
 
@@ -155,7 +156,6 @@ footer nav ul li {
 .footer-navbar-items {
   padding: 10px;
   height: 100%;
-  
 }
 .footer-div-links {
   display: flex;
@@ -196,14 +196,17 @@ form {
   width: 80%;
   margin: auto;
 }
-form input, form textarea {
+form input,
+form textarea {
   display: block;
   width: 100%;
   padding: 10px 12px;
   border-radius: 5px;
   border: #cecdcd 1px solid;
 }
-form textarea {resize: none};
+form textarea {
+  resize: none;
+}
 form div {
   margin-bottom: 10px;
   margin-top: 10px;
@@ -360,7 +363,7 @@ main .error {
     display: block;
   }
 
-  nav.navbar .user .login {
+  nav.navbar .user #login span {
     display: none;
   }
 }
@@ -456,7 +459,43 @@ body.admin main {
   margin-top: 24px;
 }
 
+body.admin main header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+
+body.admin main header .options button {
+  background-color: #c3e991;
+  width: 80px;
+  border: solid 1px #dadada;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+body.admin main header .options button:hover {
+  background-color: #b1e66b;
+  cursor: pointer;
+}
+
+form .form-control {
+  margin: 20px;
+}
+
+body.admin main table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+body.admin main table th,
+body.admin main table td {
+  padding: 8px;
+  border: 1px solid #dbdbdb;
+}
+
+body.admin main table td.option i {
+  font-size: 18px;
+}
 
 /* End Admin Site */
-/* Start Admin Site */
-/* Start Admin Site */
