--- a/src/views/admin/productEdit.ejs
+++ b/src/views/admin/productEdit.ejs
@@ -2,6 +2,7 @@
 <%- include("../partials/head") %>
 
     <body class="admin">
+        <%- include("./partials/header.ejs") %>
         <main>
             <h1>Consola de administrador</h1>
             <h2>Producto</h2>
