--- a/src/views/admin/productNew.ejs
+++ b/src/views/admin/productNew.ejs
@@ -2,6 +2,7 @@
 <%- include("../partials/head") %>
 
     <body class="admin">
+        <%- include("./partials/header.ejs") %>
         <main>
             <h1>Consola de administrador</h1>
             <h2>Crear Producto</h2>
@@ -12,7 +13,7 @@
                 </div>
                 <div class="form-control">
                     <label for="description">Descripción:</label>
-                    <textarea name="description" id="description" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" cols="30" rows="4"></textarea>
                 </div>
                 <div class="form-control">
                     <label for="brand">Marca:</label>
@@ -24,7 +25,7 @@
                 </div>
                 <div class="form-control">
                     <label for="price">Precio:</label>
-                    <input type="number" name="price" id="price">
+                    <input type="number" name="price" id="price" min="0">
                 </div>
                 <div class="form-control">
                     <label for="image">Imagen:</label>
