--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -44,7 +44,7 @@
                                         <%= product.category %>
                                     </td>
                                     <td>
-                                        <%= product.price %>
+                                        $ <%= product.price %>
                                     </td>
                                     <td>
                                         <%= product.colors %>
