--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -429,6 +429,9 @@ main .error {
     align-items: flex-start;
     height: 180px;
     margin: auto;
+    margin-top:50px;
+    width:100%;
+    height:200px;
   }
   .footer-navbar-items {
     width: 25%;
