--- a/src/views/admin/productEdit.ejs
+++ b/src/views/admin/productEdit.ejs
@@ -3,43 +3,51 @@
 
     <body class="admin">
         <%- include("./partials/header.ejs") %>
-        <main>
-            <h1>Consola de administrador</h1>
-            <h2>Producto</h2>
-            <form action=<%=`/admin/products/${product.id}?_method=PUT` %> method="POST" >
-                <div class="form-control">
-                    <label for="name">Nombre:</label>
-                    <input type="text" name="name" id="name" value=<%=product.name %>>
-                </div>
-                <div class="form-control">
-                    <label for="description">Descripción:</label>
-                    <textarea name="description" id="description" cols="30" rows="10"><%= product.description %></textarea>
-                </div>
-                <div class="form-control">
-                    <label for="brand">Marca:</label>
-                    <input type="text" name="brand" id="brand" value=<%=product.brand %>>
-                </div>
-                <div class="form-control">
-                    <label for="category">Categoria:</label>
-                    <input type="text" name="category" id="category" value=<%=product.category %>>
-                </div>
-                <div class="form-control">
-                    <label for="price">Precio:</label>
-                    <input type="number" name="price" id="price" value=<%=product.price %>>
-                </div>
-                <div class="form-control">
-                    <label for="image">Imagen:</label>
-                    <input type="file" name="img" id="image" value="Imagen del producto">
-                </div>
-                <div class="form-control">
-                    <label for="colors">Colores:</label>
-                    <input type="text" name="colors" id="colors" value=<%=product.colors %>>
-                </div>
-                <div class="form-control">
-                    <button type="submit">Guardar</button>
-                </div>
-            </form>
-        </main>
+            <main>
+                <h1>Consola de administrador</h1>
+                <header>
+                    <h2>Producto</h2>
+                </header>
+                <form action=<%=`/admin/products/${product.id}?_method=PUT` %> method="POST" >
+                    <div class="form-control">
+                        <label for="name">Nombre:</label>
+                        <input type="text" name="name" id="name" value=<%=product.name %>>
+                    </div>
+                    <div class="form-control">
+                        <label for="description">Descripción:</label>
+                        <textarea name="description" id="description" cols="30"
+                            rows="10"><%= product.description %></textarea>
+                    </div>
+                    <div class="form-control">
+                        <label for="brand">Marca:</label>
+                        <input type="text" name="brand" id="brand" value=<%=product.brand %>>
+                    </div>
+                    <div class="form-control">
+                        <label for="category">Categoria:</label>
+                        <input type="text" name="category" id="category" value=<%=product.category %>>
+                    </div>
+                    <div class="form-control">
+                        <label for="price">Precio:</label>
+                        <input type="number" name="price" id="price" value=<%=product.price %>>
+                    </div>
+                    <div class="form-control">
+                        <label for="image">Imagen:</label>
+                        <input type="file" name="img" id="image" value="Imagen del producto">
+                    </div>
+                    <div class="form-control">
+                        <label for="colors">Colores:</label>
+                        <input type="text" name="colors" id="colors" value=<%=product.colors %>>
+                    </div>
+                    <div class="form-control">
+                        <button type="submit" class="primary">Guardar</button>
+                    </div>
+                </form>
+                <form action=<%=`/admin/products/${product.id}?_method=DELETE` %> method="POST">
+                    <div class="form-control">
+                        <button type="submit" class="error">Eliminar</button>
+                    </div>
+                </form>
+            </main>
     </body>
 
     </html>
