--- a/src/views/admin/productNew.ejs
+++ b/src/views/admin/productNew.ejs
@@ -5,7 +5,9 @@
         <%- include("./partials/header.ejs") %>
         <main>
             <h1>Consola de administrador</h1>
-            <h2>Crear Producto</h2>
+            <header>
+                <h2>Crear Producto</h2>
+            </header>
             <form action="/admin/products" method="POST" >
                 <div class="form-control">
                     <label for="name">Nombre:</label>
