--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -6,7 +6,7 @@
             <main>
                 <h1>Añadir producto</h1>
 
-                <form action="" method="post">
+                <form action="" method="post" enctype="multipart/form-data">
                     <div>
                         <label for="name"></label>
                         <input type="text" name="name" id="name" placeholder="Nombre del producto">
