--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -4,26 +4,36 @@
     <body>
         <%- include("../partials/header.ejs") %>
             <main>
-                <form action="login.html" method="post">
-                    <div>
-                        <h4>Entrar con Email y Contraseña</h4>
+                <form action="/login" method="POST">
+                    <header>
+                        <h3>INICIA SESIÓN</h4>
+                    </header>
+                    <div class="form-group">
+                        <span class="error"><%=locals.errors?.form && `${errors.form.msg}`%></span>
                     </div>
-                    <div>
-                        <label for="form-user-email"></label>
-                        <input type="text" name="email" placeholder="Ej.: ejemplo@mail.com">
-                        <span class="feedback"></span>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="text" id="email" name="email" placeholder="Ej.: ejemplo@mail.com"
+                            value=<%=locals.form?.email && `${form.email}`%>>
+                        <span class="error"><%=locals.errors?.email && `${errors.email.msg}`%></span>
                     </div>
-                    <div>
-                        <label for="form-user-password"></label>
-                        <input type="password" name="password" id="form-user-password"
-                            placeholder="Ingrese su contraseña">
-                        <span class="feedback"></span>
+                    <div class="form-group">
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" placeholder="Ingrese su contraseña">
+                        <span class="error"><%=locals.errors?.password && `${errors.password.msg}`%></span>
                     </div>
-                    <div><a href="">Olvide mi contraseña</a></div>
-                    <div>
-                        <button type="submit">Enviar</button>
+                    <div class="form-group form-settings">
+                        <div class="form-options">
+                            <a href="/password_reset">¿Has olvidado tu contraseña?</a>
+                        </div>
                     </div>
-                    <div><a href="/register">¿No tiene una cuenta? Registrese</a></div>
+                    <div class="form-group">
+                        <button type="submit">Iniciar sesión</button>
+                    </div>
+                    <div class="form-fork">
+                        ¿No tienes una cuenta aún?
+                        <a href="/register">Creá una cuenta</a>
+                    </div>
                 </form>
             </main>
             <%- include('../partials/footer') %>
