--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -5,27 +5,41 @@
         <%- include("../partials/header.ejs") %>
             <main>
                 <form action="/register" method="post">
-                    <div>
-                        <h4>Registro</h4>
+                    <header>
+                        <h3>REGÍSTRATE</h4>
+                    </header>
+                    <div class="form-group">
+                        <span class="error"><%=locals.errors?.form && `${errors.form.msg}`%></span>
                     </div>
-                    <div>
-                        <label for="form-user-email"></label>
-                        <input type="text" name="email" placeholder="Correo electronico">
-                        <span class="feedback"></span>
+                    <div class="form-group">
+                        <label for="firstName">Nombre:</label>
+                        <input type="text" id="firstName" name="firstName" placeholder="Nombre"
+                            value=<%=locals.form?.firstName && `${form.firstName}`%>>
+                        <span class="error"><%=locals.errors?.firstName && `${errors.firstName.msg}`%></span>
                     </div>
-                    <div>
-                        <label for="form-user-password"></label>
-                        <input type="password" name="password" id="form-user-password" placeholder="Contraseña">
-                        <span class="feedback"></span>
+                    <div class="form-group">
+                        <label for="lastName">Apellido:</label>
+                        <input type="text" id="lastName" name="lastName" placeholder="Apellido"
+                            value=<%=locals.form?.lastName && `${form.lastName}`%>>
+                        <span class="error"><%=locals.errors?.lastName && `${errors.firstName.msg}`%></span>
                     </div>
-                    <div>
-                        <label for="form-user-passwordmatch"></label>
-                        <input type="password" name="password-match" id="form-user-passwordmatch"
-                            placeholder="Confirmar Contraseña">
-                        <span class="feedback"></span>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="text" id="email" name="email" placeholder="Ej.: ejemplo@mail.com"
+                            value=<%=locals.form?.email && `${form.email}`%>>
+                        <span class="error"><%=locals.errors?.email && `${errors.email.msg}`%></span>
                     </div>
-                    <div>
-                        <button type="submit">Crear</button>
+                    <div class="form-group">
+                        <label for="password">Contraseña:</label>
+                        <input type="password" id="password" name="password" placeholder="Ingrese su contraseña">
+                        <span class="error"><%=locals.errors?.password && `${errors.password.msg}`%></span>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">Crear cuenta</button>
+                    </div>
+                    <div class="form-fork">
+                        ¿Ya tienes una cuenta?
+                        <a href="/login">Iniciá sesión</a>
                     </div>
                 </form>
             </main>
