Modify Product CRUD

--- a/src/views/admin/product.ejs
+++ b/src/views/admin/product.ejs
@@ -10,7 +10,7 @@
                 </header>
                 <div class="detail">
                     <div class="panel">
-                        <img src=<%=`/images/products/${product.img}` %> alt="Product image" width="100%" %>>
+                        <img src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
                     </div>
                     <div class="panel">
                         <div class="section">
