--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -513,6 +513,18 @@ body.admin main form .form-control {
   margin: 20px;
 }
 
+body.admin main form .form-control img {
+  width: 100%;
+  border: solid 1px #d5d5d5;
+  border-radius: 4px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+body.admin main form .form-control img:hover {
+  opacity: 0.9;
+}
+
 body.admin main form button {
   cursor: pointer;
 }
