--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -11,10 +11,10 @@
         <div id="myLinks" class="icons">
             <ul>
                 <li>
-                    <a href="/#">Productos</a>
+                    <a href="/admin/products">Productos</a>
                 </li>
                 <li>
-                    <a href="/#">Usuarios</a>
+                    <a href="/admin/users">Usuarios</a>
                 </li>
             </ul>
         </div>
