--- a/src/views/admin/productNew.ejs
+++ b/src/views/admin/productNew.ejs
@@ -8,7 +8,7 @@
             <header>
                 <h2>Crear Producto</h2>
             </header>
-            <form action="/admin/products" method="POST" >
+            <form action="/admin/products" method="POST" enctype="multipart/form-data">
                 <div class="form-control">
                     <label for="name">Nombre:</label>
                     <input type="text" name="name" id="name">
