--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -8,7 +8,7 @@
                 <header>
                     <h2>Productos</h2>
                     <div class="options">
-                        <a href="products/add">
+                        <a href="/admin/products/create">
                             <button>
                                 Nuevo
                             </button>
