--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -4,7 +4,7 @@
             <a><i class="icon fas fa-bars fa-xl"></i></a>
         </div>
         <div class="brand">
-            <a href="/#">
+            <a href="/">
                 <img src="/images/logo.png" alt="Logo" id="brand-logo">
             </a>
         </div>
@@ -21,9 +21,9 @@
         <div class="user">
             <ul>
                 <li id="login">
-                    <a href="/login">
+                    <a href="/admin">
                         <i class="fa-solid fa-circle-user"></i>
-                        <span>Ingresar</span>
+                        <span class="login"><%= user.firstName %></span>
                     </a>
                 </li>
             </ul>
