--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -6,13 +6,18 @@
             <div id="login-form">
                 <form action="login" method="POST">
                     <h1>Consola de administrador</h1>
+                    <div class="form-group">
+                        <span class="error"><%=locals.errors?.form && `${errors.form.msg}`%></span>
+                    </div>
                     <div class="form-control">
                         <label for="email"></label>
-                        <input type="email" name="email" id="email" placeholder="Ingrese su email">
+                        <input type="email" name="email" id="email" placeholder="Ingrese su email" value=<%=locals.form?.email && `${form.email}`%>>
+                        <span class="error"><%=locals.errors?.email && `${errors.email.msg}`%></span>
                     </div>
                     <div class="form-control">
                         <label for="password"></label>
                         <input type="password" name="password" id="password" placeholder="Ingrese su contraseña">
+                        <span class="error"><%=locals.errors?.password && `${errors.password.msg}`%></span>
                     </div>
                     <div class="form-control">
                         <button type="submit">Ingresar</button>
